// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create task 1`] = `
Object {
  "creations": Array [
    Object {
      "_createdAt": 0,
      "_id": "task-id",
      "_timestamp": 0,
      "_type": "task",
      "_updatedAt": 0,
      "brief": "hello, create.",
    },
  ],
  "id": "change-packet-id",
  "notifications": Array [],
  "removals": Array [],
  "timestamp": undefined,
  "updates": Array [],
}
`;

exports[`should remove task 1`] = `
Object {
  "creations": Array [],
  "id": "change-packet-id",
  "notifications": Array [],
  "removals": Array [
    Object {
      "id": "task-id",
      "type": "task",
    },
  ],
  "timestamp": undefined,
  "updates": Array [],
}
`;

exports[`should update task brief 1`] = `
Object {
  "creations": Array [],
  "id": "change-packet-id",
  "notifications": Array [],
  "removals": Array [],
  "timestamp": undefined,
  "updates": Array [
    Object {
      "diffs": Array [
        DiffEdit {
          "kind": "E",
          "lhs": "hello, world.",
          "path": Array [
            "brief",
          ],
          "rhs": "hello, jest.",
        },
      ],
      "snapshot": Object {
        "_createdAt": 0,
        "_id": "task-id",
        "_timestamp": 0,
        "_type": "task",
        "_updatedAt": 0,
        "brief": "hello, jest.",
      },
    },
  ],
}
`;
